--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -37,16 +37,111 @@
         "\n",
         "df = pd.read_csv(url,low_memory=False)\n",
         "\n",
-        "df.head(20)\n",
+        "print(df.shape, '\\n') # List the dimensions of df\n",
+        "print(df.dtypes, '\\n') # The types of the variables; `object` is a bad sign\n",
+        "print(df.columns, '\\n') # Column names\n",
         "\n",
         "\n",
         "## Q1.1\n",
+        "\n",
+        "df['Price'] = pd.to_numeric(df['Price'], errors='coerce') # Coerce the variable to numeric\n",
+        "\n",
+        "print(df.shape, '\\n') # List the dimensions of df\n",
+        "print(df.dtypes, '\\n') # The types of the variables; `object` is a bad sign\n",
+        "print(df.columns, '\\n') # Column names\n",
+        "\n",
+        "df.head()\n",
+        "\n",
+        "## Here, in order to diagnose the issue with the Price variable, you first need to diagnose its properties. So above I list the dimensions.\n",
+        "## Once, seeing that the problem came from it initially being an 'object', you can change it to a numeric to fix the issue.\n",
+        "\n",
         "\n"
       ],
       "metadata": {
         "id": "wJRYdj9aFGl7"
       },
       "id": "wJRYdj9aFGl7",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np # Import the numpy package into your workspace\n",
+        "import matplotlib.pyplot as plt # Import matplotlib into your workspace\n",
+        "import pandas as pd  # Import the pandas package into your workspace\n",
+        "\n",
+        "## Q1.2\n",
+        "\n",
+        "url_2 = \"https://raw.githubusercontent.com/ezraattisso/wrangling/refs/heads/main/assignment/data/mn_police_use_of_force.csv\"\n",
+        "\n",
+        "df_2 = pd.read_csv(url_2,low_memory=False)\n",
+        "\n",
+        "print(df_2.shape, '\\n') # List the dimensions of df\n",
+        "print(df_2.dtypes, '\\n') # The types of the variables; `object` is a bad sign\n",
+        "print(df_2.columns, '\\n') # Column names\n",
+        "\n",
+        "\n",
+        "cross_tab = pd.crosstab(df_2['subject_injury'], df_2['force_type'])\n",
+        "print(cross_tab)\n",
+        "# this is for cross-tabulation to see the trends in between the columns.\n",
+        "\n",
+        "\n",
+        "df_2['subject_injury'] = df_2['subject_injury'].fillna(\"No\")\n",
+        "# Fill NaN values with \"No\"\n",
+        "\n",
+        "df_2.head(20)"
+      ],
+      "metadata": {
+        "id": "XGH2DNJjtkDH"
+      },
+      "id": "XGH2DNJjtkDH",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np # Import the numpy package into your workspace\n",
+        "import matplotlib.pyplot as plt # Import matplotlib into your workspace\n",
+        "import pandas as pd  # Import the pandas package into your workspace\n",
+        "\n",
+        "url_3 = 'http://www.vcsc.virginia.gov/pretrialdataproject/October%202017%20Cohort_Virginia%20Pretrial%20Data%20Project_Deidentified%20FINAL%20Update_10272021.csv'\n",
+        "df_3 = pd.read_csv(url_3,low_memory=False)\n",
+        "\n",
+        "## Q1.3\n",
+        "\n",
+        "\n",
+        "df_3['WhetherDefendantWasReleasedPretrial'] = df_3['WhetherDefendantWasReleasedPretrial'].replace(\n",
+        "    [\"\", \"unknown\", \"n/a\", \"-\", None], np.nan)\n",
+        "\n",
+        "# Replace missing values (empty strings, \"unknown\", etc.) with NaN\n"
+      ],
+      "metadata": {
+        "id": "xk_KmOHYvej8"
+      },
+      "id": "xk_KmOHYvej8",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np # Import the numpy package into your workspace\n",
+        "import matplotlib.pyplot as plt # Import matplotlib into your workspace\n",
+        "import pandas as pd  # Import the pandas package into your workspace\n",
+        "\n",
+        "url_3 = 'http://www.vcsc.virginia.gov/pretrialdataproject/October%202017%20Cohort_Virginia%20Pretrial%20Data%20Project_Deidentified%20FINAL%20Update_10272021.csv'\n",
+        "df_3 = pd.read_csv(url_3,low_memory=False)\n",
+        "\n",
+        "## Q1.4\n",
+        "\n",
+        "df_3.head(20)\n"
+      ],
+      "metadata": {
+        "id": "Molflau98ud_"
+      },
+      "id": "Molflau98ud_",
       "execution_count": null,
       "outputs": []
     },
@@ -69,6 +164,24 @@
         "8. Are sharks more likely to launch unprovoked attacks on men or women? Is the attack more or less likely to be fatal when the attack is provoked or unprovoked? Is it more or less likely to be fatal when the victim is male or female? How do you feel about sharks?\n",
         "9. What proportion of attacks appear to be by white sharks? (Hint: `str.split()` makes a vector of text values into a list of lists, split by spaces.)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np # Import the numpy package into your workspace\n",
+        "import matplotlib.pyplot as plt # Import matplotlib into your workspace\n",
+        "import pandas as pd  # Import the pandas package into your workspace\n",
+        "\n",
+        "df_attacks = pd.read_excel(\"/Users/etsriattisso/Desktop/DS 3001/GSAF5.xls\")\n",
+        "\n",
+        "print(df_attacks.head())"
+      ],
+      "metadata": {
+        "id": "hCBgenMS9avE"
+      },
+      "id": "hCBgenMS9avE",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
